Fixed account page spacing

--- a/wp-content/themes/rude-by-design/sass/woocommerce/_account.scss
+++ b/wp-content/themes/rude-by-design/sass/woocommerce/_account.scss
@@ -1,4 +1,14 @@
 .woocommerce-account {
+  form {
+    display: grid;
+    gap: var(--scale-16-32);
+
+    &.search-form {
+      display: flex;
+      gap: 0;
+    }
+  }
+
   .u-column1,
   .u-column2 {
     display: grid;
